// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render Wall without crashing 1`] = `
<Keyboard
  shortcuts={
    Array [
      Object {
        "action": [Function],
        "shortcut": "arrow-down",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-left",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-right",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-up",
      },
    ]
  }
  targetSelector="body"
>
  <div
    className="App no-select"
  >
    <Connect(Sidebar) />
    <main
      className="main"
    >
      <Connect(Wall) />
    </main>
  </div>
</Keyboard>
`;

exports[`App should render Wall without crashing when status attribute is not defined 1`] = `
<Keyboard
  shortcuts={
    Array [
      Object {
        "action": [Function],
        "shortcut": "arrow-down",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-left",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-right",
      },
      Object {
        "action": [Function],
        "shortcut": "arrow-up",
      },
    ]
  }
  targetSelector="body"
>
  <div
    className="App no-select"
  >
    <Connect(Sidebar) />
    <main
      className="main"
    >
      <Connect(Wall) />
    </main>
  </div>
</Keyboard>
`;

exports[`App should render Welcome without crashing 1`] = `
<div
  className="App no-select"
>
  <Connect(Sidebar) />
  <main
    className="main"
  >
    <Connect(Welcome) />
  </main>
</div>
`;

exports[`App should render renderModalLose without crashing 1`] = `
<div
  className="App no-select"
>
  <Connect(Sidebar) />
  <main
    className="main"
  >
    <Modal
      bestScore={0}
      button={
        Object {
          "action": [Function],
          "text": "Try Again",
        }
      }
      hardMode={false}
      score={0}
      title="You Lose"
      wall={
        Array [
          2,
          4,
          8,
          16,
          4096,
          0,
          0,
          32,
          2048,
          0,
          0,
          64,
          1024,
          512,
          256,
          128,
        ]
      }
    />
  </main>
</div>
`;

exports[`App should render renderModalWon without crashing 1`] = `
<div
  className="App no-select"
>
  <Connect(Sidebar) />
  <main
    className="main"
  >
    <Modal
      bestScore={0}
      button={
        Object {
          "action": [Function],
          "text": "Try Again",
        }
      }
      hardMode={false}
      score={0}
      title="You Won"
      wall={
        Array [
          2,
          4,
          8,
          16,
          4096,
          0,
          0,
          32,
          2048,
          0,
          0,
          64,
          1024,
          512,
          256,
          128,
        ]
      }
    />
  </main>
</div>
`;
